add some command
git commit --allow-empty -m "Trigger rebuild"
git push

--- a/1coding.HTML
+++ b/1coding.HTML
@@ -15,5 +15,9 @@
     <h2>코딩</h2>
     <b>코딩</b>은 내가 <strong>감히</strong> 손댈 수 조차 없어보였으나, 나름대로 할만한 과목인듯 싶다. <u>HTML은 특히.</u>
 
+    git commit --allow-empty -m "Trigger rebuild"
+    git push
+
+
   </body>
 </html>
