--- a/2Question.HTML
+++ b/2Question.HTML
@@ -16,6 +16,8 @@
     과연 파이선과 자바 등도 내 적성에 맞을 건인가?<p>
     <img src="uni.jpg" width="400"><p>
 
+      git commit --allow-empty -m "Trigger rebuild"
+      git push
 
   </body>
 </html>
