--- a/3sleepy.HTML
+++ b/3sleepy.HTML
@@ -14,5 +14,9 @@
 
     <h2>졸림</h2>
     맨날 밤에 하려니 졸림과의 싸움까지 추가되었다.
+
+    git commit --allow-empty -m "Trigger rebuild"
+    git push
+
   </body>
 </html>
