--- a/index.HTML
+++ b/index.HTML
@@ -13,5 +13,9 @@
     </ol>
     <h2>시작</h2>
     새로운 시작. 새로운 분야.
+
+    git commit --allow-empty -m "Trigger rebuild"
+    git push
+
   </body>
 </html>
